Função para verificar se os elementos estão sangrados ou não parece estar funcionando como esperado, precisao de posição de imagens tambem foi aprimorado